<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="FB_CameraDummy" Id="{25aa4386-39f0-469e-b501-cef0bb36b533}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CameraDummy EXTENDS FB_CameraBase
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Property Name="eCameraMode" Id="{6d0d2ebb-c8e7-4e49-b4bf-371007fb02f7}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY eCameraMode : E_CameraMode
]]></Declaration>
      <Get Name="Get" Id="{a84fecb9-d352-4caa-b5e8-ae26a7d3e977}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[eCameraMode := _eCameraMode;
IF _eCameraMode = E_CameraMode.Auto THEN
  eCameraMode := E_CameraMode.NoCorrection;
END_IF]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="eDeviceType" Id="{6bc68d1d-d9b7-4b72-a72b-c1581c89809e}">
      <Declaration><![CDATA[PROPERTY eDeviceType : E_CameraDevice]]></Declaration>
      <Get Name="Get" Id="{708013e7-3119-4cf9-8185-b1fc9c6336ee}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[eDeviceType := E_CameraDevice.SheetDetect;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="GetCamStatus" Id="{002a8acc-defe-4563-8b88-d149af9e57f9}">
      <Declaration><![CDATA[METHOD GetCamStatus : BOOL
VAR_OUTPUT
  bConnectionOK  : BOOL;    // Camera connected
  bTeachOk       : BOOL;    // Teach successful
  nTeachedPoints : UDINT;   // Teached points for this job
  nScannedPoints : UDINT;   // Scanned points on current sheet
  bCamStarted    : BOOL;    // Camera trigger is active, cam started
  bCamDone       : BOOL;    // Camera finished on last CT
  bErrors        : ARRAY[1..GVL_Camera.nC_NbCamErrors] OF BOOL;  // generic error flag list
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[bConnectionOK  := TRUE;  //NO comm with a cam 
bTeachOk       := TRUE;  //NO teach availabe
nTeachedPoints := 0;
nScannedPoints := 0;
bCamStarted    := _bCamStarted;
bCamDone       := _bCamDone;

GetCamStatus := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="setCameraMode" Id="{e977affa-219b-4b8e-97d6-f357fdc03577}">
      <Declaration><![CDATA[(*
  Set mode to camera.
  :return: TRUE if success
*)
METHOD setCameraMode : BOOL
VAR_INPUT
  eCameraMode : E_CameraMode;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF eCameraMode = E_CameraMode.NoCorrection THEN   // supported mode
  
  _eCameraMode := eCameraMode; 
  setCameraMode := TRUE;        // set desired mode
ELSE
  LogError(F_Concat3('Camera mode=', TO_STRING(eCameraMode), ' not supported by camera'));
  _eCameraMode := E_CameraMode.NoCorrection;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Property Name="sName" Id="{2f5c4c3d-a6df-4ad3-9917-b6a5986d4c5b}">
      <Declaration><![CDATA[{attribute 'monitoring':='variable'}
PROPERTY sName : STRING
]]></Declaration>
      <Get Name="Get" Id="{4445f55b-fc81-490f-b8b1-8b169e893684}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[sName := 'SheetDetect';]]></ST>
        </Implementation>
      </Get>
    </Property>
    <LineIds Name="FB_CameraDummy">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_CameraDummy.eCameraMode.Get">
      <LineId Id="14" Count="0" />
      <LineId Id="16" Count="1" />
      <LineId Id="15" Count="0" />
    </LineIds>
    <LineIds Name="FB_CameraDummy.eDeviceType.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_CameraDummy.GetCamStatus">
      <LineId Id="20" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="4" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="21" Count="0" />
    </LineIds>
    <LineIds Name="FB_CameraDummy.setCameraMode">
      <LineId Id="28" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="24" Count="1" />
      <LineId Id="40" Count="1" />
      <LineId Id="27" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_CameraDummy.sName.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>