<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="FB_CameraDummy" Id="{fb042f63-d6eb-4556-94a2-674fae320829}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CameraDummy EXTENDS FB_CameraBase
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Property Name="eCameraMode" Id="{53cb1655-e0b5-4df5-82cf-8e993d9ee019}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY eCameraMode : E_CameraMode
]]></Declaration>
      <Get Name="Get" Id="{ccab4305-c3f0-406a-b402-36c608c04c35}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[eCameraMode := _eCameraMode;
IF _eCameraMode = E_CameraMode.Auto THEN
  eCameraMode := E_CameraMode.NoCorrection;
END_IF]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="eDeviceType" Id="{23a50069-69d1-4e0c-baa6-252c56a81b22}">
      <Declaration><![CDATA[PROPERTY eDeviceType : E_CameraDevice]]></Declaration>
      <Get Name="Get" Id="{5f28284e-32a0-4fdd-899e-8ce443075433}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[eDeviceType := E_CameraDevice.SheetDetect;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="GetCamStatus" Id="{2242ecf5-8c2b-4177-a249-a9c70a4011bb}">
      <Declaration><![CDATA[METHOD GetCamStatus : BOOL
VAR_OUTPUT
  bConnectionOK  : BOOL;    // Camera connected
  bTeachOk       : BOOL;    // Teach successful
  nTeachedPoints : UDINT;   // Teached points for this job
  nScannedPoints : UDINT;   // Scanned points on current sheet
  bCamStarted    : BOOL;    // Camera trigger is active, cam started
  bCamDone       : BOOL;    // Camera finished on last CT
  bErrors        : ARRAY[1..GVL_Camera.nC_NbCamErrors] OF BOOL;  // generic error flag list
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[bConnectionOK  := TRUE;  //NO comm with a cam 
bTeachOk       := TRUE;  //NO teach availabe
nTeachedPoints := 0;
nScannedPoints := 0;
bCamStarted    := _bCamTriggerStarted;
bCamDone       := _bCamTriggerDone;

GetCamStatus := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="setCameraMode" Id="{faf52507-a55c-4852-a33b-a6a7ec32731d}">
      <Declaration><![CDATA[(*
  Set mode to camera.
  :return: TRUE if success
*)
METHOD setCameraMode : BOOL
VAR_INPUT
  eCameraMode : E_CameraMode;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF eCameraMode = E_CameraMode.NoCorrection THEN   // supported mode
  
  _eCameraMode := eCameraMode; 
  setCameraMode := TRUE;        // set desired mode
ELSE
  LogError(F_Concat3('Camera mode=', TO_STRING(eCameraMode), ' not supported by camera'));
  _eCameraMode := E_CameraMode.NoCorrection;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Property Name="sName" Id="{47709119-4c99-45dd-8ef0-7c2b3c4235a6}">
      <Declaration><![CDATA[{attribute 'monitoring':='variable'}
PROPERTY sName : STRING
]]></Declaration>
      <Get Name="Get" Id="{a8946bb1-709d-4530-b955-95040efca2b0}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[sName := 'SheetDetect';]]></ST>
        </Implementation>
      </Get>
    </Property>
    <LineIds Name="FB_CameraDummy">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_CameraDummy.eCameraMode.Get">
      <LineId Id="14" Count="0" />
      <LineId Id="16" Count="1" />
      <LineId Id="15" Count="0" />
    </LineIds>
    <LineIds Name="FB_CameraDummy.eDeviceType.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_CameraDummy.GetCamStatus">
      <LineId Id="20" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="4" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="21" Count="0" />
    </LineIds>
    <LineIds Name="FB_CameraDummy.setCameraMode">
      <LineId Id="28" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="24" Count="1" />
      <LineId Id="40" Count="1" />
      <LineId Id="27" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_CameraDummy.sName.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>